--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -15,7 +15,7 @@
                 <td>{{ person.name }}</td>
                 <td>{{ person.city }}</td>
             </tr>
-        </ul>
+        </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
 </body>
