--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -10,5 +10,6 @@
     <script src="https://code.angularjs.org/1.3.15/angular-route.js"></script>
     <script src="app/app.js"></script>
     <script src="app/controller/customerController.js"></script>
+    <script src="app/controller/orderController.js"></script>
 </body>
 </html>
